--- a/JavaDemoGithubPractice/app/src/main/res/layout/activity_main.xml
+++ b/JavaDemoGithubPractice/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,14 @@
         app:menu="@menu/activity_main_drawer"
         />
 
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view_end"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="end"
+        android:fitsSystemWindows="true"
+        />
+
+
 </androidx.drawerlayout.widget.DrawerLayout>
