--- a/JavaDemoGithubPractice/app/src/main/res/layout/content_main.xml
+++ b/JavaDemoGithubPractice/app/src/main/res/layout/content_main.xml
@@ -1,232 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:gl="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.javademogithubpractice.ui.activity.MainActivity"
-    tools:showIn="@layout/app_bar_main"
-    style="@style/parent.contentLayout">
+    tools:showIn="@layout/app_bar_main">
 
-    <androidx.core.widget.NestedScrollView
+    <FrameLayout
+        android:id="@+id/frame_layout_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="15dp"
-                app:cardPreventCornerOverlap="true"
-                android:layout_marginTop="10dp">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:minHeight="100dp"
-                    android:background="@drawable/home_gradient_maths"
-                    android:padding="10dp">
-
-                    <TextView
-                        android:id="@+id/textViewSub1Title"
-                        android:text="Maths"
-                        style="@style/viewParent.headerText.HomeCardTitle" />
-
-                    <TextView
-                        android:text="Study nature, love nature,\nclose to nature"
-                        style="@style/viewParent.headerText.homeCardContent"
-                        android:layout_below="@id/textViewSub1Title"/>
-
-                    <ImageView
-                        android:maxHeight="90dp"
-                        android:src="@drawable/home_ic_maths"
-                        style="@style/homeCardImage" />
-
-                </RelativeLayout>
-            </androidx.cardview.widget.CardView>
-
-
-            <!--if the second one is used as model for recyclerView, refer:
-            https://appsnipp.com/gradient-layout-for-dynamic-gradients-in-android-without-drawable-library/
-            -->
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="15dp"
-                app:cardPreventCornerOverlap="true"
-                android:layout_marginTop="10dp">
-
-                <net.colindodd.gradientlayout.GradientRelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:minHeight="100dp"
-                    gl:start_color="@color/gradientLightYellow"
-                    gl:end_color="@color/gradientOrange"
-                    gl:orientation="LEFT_RIGHT"
-                    android:padding="10dp">
-
-                    <TextView
-                        android:id="@+id/textViewSub2Title"
-                        android:text="Physics"
-                        style="@style/viewParent.headerText.HomeCardTitle" />
-
-                    <TextView
-                        android:text="Study nature, love nature,\nclose to nature"
-                        style="@style/viewParent.headerText.homeCardContent"
-                        android:layout_below="@id/textViewSub2Title"/>
-
-                    <ImageView
-                        android:maxHeight="90dp"
-                        android:src="@drawable/home_ic_physics"
-                        style="@style/homeCardImage" />
-
-                </net.colindodd.gradientlayout.GradientRelativeLayout>
-            </androidx.cardview.widget.CardView>
-
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="15dp"
-                app:cardPreventCornerOverlap="true"
-                android:layout_marginTop="10dp">
-
-                <net.colindodd.gradientlayout.GradientRelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:minHeight="100dp"
-                    gl:end_color="@color/gradientLightYellow2"
-                    gl:start_color="@color/gradientLightOrange2"
-                    gl:orientation="LEFT_RIGHT"
-                    android:padding="10dp">
-
-                    <TextView
-                        android:id="@+id/textViewSub3Title"
-                        android:text="Chemistry"
-                        style="@style/viewParent.headerText.HomeCardTitle" />
-
-                    <TextView
-                        android:text="Study nature, love nature,\nclose to nature"
-                        style="@style/viewParent.headerText.homeCardContent"
-                        android:layout_below="@id/textViewSub3Title"/>
-
-                    <ImageView
-                        android:maxHeight="90dp"
-                        android:src="@drawable/home_ic_chemistry"
-                        style="@style/homeCardImage" />
-
-                </net.colindodd.gradientlayout.GradientRelativeLayout>
-            </androidx.cardview.widget.CardView>
-
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="15dp"
-                app:cardPreventCornerOverlap="true"
-                android:layout_marginTop="10dp">
-
-                <net.colindodd.gradientlayout.GradientRelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:minHeight="100dp"
-                    gl:start_color="@color/gradientLightOrange2"
-                    gl:end_color="@color/gradientOrange3"
-                    gl:orientation="LEFT_RIGHT"
-                    android:padding="10dp">
-
-                    <TextView
-                        android:id="@+id/textViewSub4Title"
-                        android:text="Biology"
-                        style="@style/viewParent.headerText.HomeCardTitle" />
-
-                    <TextView
-                        android:text="Study nature, love nature,\nclose to nature"
-                        style="@style/viewParent.headerText.homeCardContent"
-                        android:layout_below="@id/textViewSub4Title"/>
-
-                    <ImageView
-                        android:maxHeight="90dp"
-                        android:src="@drawable/home_ic_biology"
-                        style="@style/homeCardImage" />
-
-                </net.colindodd.gradientlayout.GradientRelativeLayout>
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="15dp"
-                app:cardPreventCornerOverlap="true"
-                android:layout_marginTop="10dp">
-
-                <net.colindodd.gradientlayout.GradientRelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:minHeight="100dp"
-                    gl:start_color="@color/gradientViolet"
-                    gl:end_color="@color/gradientLightBlue"
-                    gl:orientation="LEFT_RIGHT"
-                    android:padding="10dp">
-
-                    <TextView
-                        android:id="@+id/textViewSub5Title"
-                        android:text="Geography"
-                        style="@style/viewParent.headerText.HomeCardTitle" />
-
-                    <TextView
-                        android:text="Study nature, love nature,\nclose to nature"
-                        style="@style/viewParent.headerText.homeCardContent"
-                        android:layout_below="@id/textViewSub5Title"/>
-
-                    <ImageView
-                        android:maxHeight="90dp"
-                        android:src="@drawable/home_ic_geography"
-                        style="@style/homeCardImage" />
-
-                </net.colindodd.gradientlayout.GradientRelativeLayout>
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="15dp"
-                app:cardPreventCornerOverlap="true"
-                android:layout_marginTop="10dp">
-
-                <net.colindodd.gradientlayout.GradientRelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:minHeight="100dp"
-                    gl:start_color="@color/gradientLightGreen"
-                    gl:end_color="@color/gradientLightBlue"
-                    gl:orientation="LEFT_RIGHT"
-                    android:padding="10dp">
-
-                    <TextView
-                        android:id="@+id/textViewSub6Title"
-                        android:text="Politics"
-                        style="@style/viewParent.headerText.HomeCardTitle" />
-
-                    <TextView
-                        android:text="Study nature, love nature,\nclose to nature"
-                        style="@style/viewParent.headerText.homeCardContent"
-                        android:layout_below="@id/textViewSub6Title"/>
-
-                    <ImageView
-                        android:maxHeight="90dp"
-                        android:src="@drawable/home_ic_chemistry"
-                        style="@style/homeCardImage" />
-
-                </net.colindodd.gradientlayout.GradientRelativeLayout>
-            </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
+        android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
