--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,9 +7,9 @@
             android:icon="@drawable/ic_global_news_black_24dp"
             android:title="Global News" />
         <item
-            android:id="@+id/nav_popular_repo"
+            android:id="@+id/nav_news"
             android:icon="@drawable/ic_popular_repo_black_24dp"
-            android:title="Popular repositories" />
+            android:title="News" />
         <item
             android:id="@+id/nav_repository"
             android:icon="@drawable/ic_repo_black_24dp"
