--- a/app/src/main/res/layout/activity_view_pager.xml
+++ b/app/src/main/res/layout/activity_view_pager.xml
@@ -12,11 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"/>
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+    <include layout="@layout/content_activity_frame" />
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigation"
@@ -31,8 +29,6 @@
         app:itemIconTint="@color/bottom_navigation_color"
         app:itemTextColor="@color/bottom_navigation_color"
         app:itemBackground="@color/bottomNavigationBackground"/>
-
-
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
