--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -6,6 +6,7 @@
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search_title"
         android:title="@string/search"
+        android:visible="true"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView"/>
 </menu>
