change searchview add filter(but not work correctly)

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -24,9 +24,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
+            <!--style="@style/Widget.AppCompat.ProgressBar.Horizontal"-->
+
             <ProgressBar
                 android:id="@+id/loader"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
