--- a/app/src/main/res/layout/layout_appbar_profile.xml
+++ b/app/src/main/res/layout/layout_appbar_profile.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/app_bar"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="350dp"
     android:fitsSystemWindows="true"
     >
