--- a/app/src/main/res/layout/layout_item_activity.xml
+++ b/app/src/main/res/layout/layout_item_activity.xml
@@ -8,6 +8,7 @@
     android:layout_marginLeft="@dimen/card_view_horizontal_margin"
     android:layout_marginRight="@dimen/card_view_horizontal_margin"
     android:layout_marginBottom="@dimen/card_view_vertical_margin"
+    app:cardCornerRadius="15dp"
     android:layout_marginTop="@dimen/card_view_vertical_margin"
     app:cardPreventCornerOverlap="true">
 
