--- a/app/src/main/res/layout/layout_item_notification.xml
+++ b/app/src/main/res/layout/layout_item_notification.xml
@@ -7,9 +7,9 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/card_view_horizontal_margin"
     android:layout_marginRight="@dimen/card_view_horizontal_margin"
+    app:cardCornerRadius="15dp"
     android:layout_marginTop="@dimen/card_view_vertical_margin"
-    android:layout_marginBottom="@dimen/card_view_vertical_margin"
-    app:cardCornerRadius="@dimen/card_view_corner_radius">
+    android:layout_marginBottom="@dimen/card_view_vertical_margin">
 
     <LinearLayout
         android:id="@+id/linear_notifications"
@@ -39,7 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/notifications"
-                android:textSize="@dimen/text_normal"
+                android:textSize="14dp"
                 android:textColor="@color/white"
                 style="@style/viewParent.headerText.HomeCardTitle"
                 android:maxLines="2"
