--- a/app/src/main/res/layout/fragment_profile_info.xml
+++ b/app/src/main/res/layout/fragment_profile_info.xml
@@ -110,7 +110,6 @@
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/spacing_mini"
                         android:layout_weight="1"
-                        android:background="@color/white"
                         android:gravity="center"
                         android:orientation="vertical">
 
@@ -118,12 +117,14 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/view"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/text_large"/>
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/members"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/text_mini"/>
                     </LinearLayout>
 
@@ -133,7 +134,6 @@
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/spacing_mini"
                         android:layout_weight="1"
-                        android:background="@color/white"
                         android:gravity="center"
                         android:orientation="vertical">
 
@@ -141,13 +141,14 @@
                             android:id="@+id/followers_num_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text=""
+                            android:textColor="@color/white"
                             android:textSize="@dimen/text_large"/>
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/followers"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/text_mini"/>
                     </LinearLayout>
 
@@ -157,7 +158,6 @@
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/spacing_mini"
                         android:layout_weight="1"
-                        android:background="@color/white"
                         android:gravity="center"
                         android:orientation="vertical">
 
@@ -165,13 +165,14 @@
                             android:id="@+id/following_num_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text=""
+                            android:textColor="@color/white"
                             android:textSize="@dimen/text_large"/>
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/following"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/text_mini"/>
                     </LinearLayout>
 
@@ -181,7 +182,6 @@
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/spacing_mini"
                         android:layout_weight="1"
-                        android:background="@color/white"
                         android:gravity="center"
                         android:orientation="vertical">
 
@@ -189,13 +189,14 @@
                             android:id="@+id/repos_num_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text=""
+                            android:textColor="@color/white"
                             android:textSize="@dimen/text_large"/>
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/repositories"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/text_mini"/>
                     </LinearLayout>
 
@@ -205,7 +206,6 @@
                         android:layout_height="match_parent"
                         android:layout_margin="@dimen/spacing_mini"
                         android:layout_weight="1"
-                        android:background="@color/white"
                         android:gravity="center"
                         android:orientation="vertical">
 
@@ -213,13 +213,14 @@
                             android:id="@+id/gists_num_text"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text=""
+                            android:textColor="@color/white"
                             android:textSize="@dimen/text_large"/>
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/gists"
+                            android:textColor="@color/white"
                             android:textSize="@dimen/text_mini"/>
                     </LinearLayout>
                 </LinearLayout>
@@ -241,6 +242,7 @@
             app:contentPaddingTop="@dimen/spacing_normal"
             app:contentPaddingBottom="@dimen/spacing_normal">
             <LinearLayout
+                android:id="@+id/linear_user_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
