--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -11,12 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/background_image_one_signin" />
+        android:src="@drawable/android" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="18dp"
         android:layout_marginTop="116dp"
         android:layout_marginEnd="8dp"
         android:text="Welcome\nBack"
@@ -39,8 +39,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_x_large"
-            android:textColor="#292929"
-            android:textColorHint="#797979"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
             android:hint="@string/user_name">
@@ -50,6 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
+                android:textColor="@color/white"
                 android:maxLines="1"
                 android:imeOptions="actionNext"/>
         </com.google.android.material.textfield.TextInputLayout>
@@ -63,9 +64,10 @@
             android:hint="@string/password"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
-            android:textColor="#292929"
-            android:textColorHint="#797979"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
             app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/white"
             >
 
             <com.google.android.material.textfield.TextInputEditText
@@ -73,6 +75,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
+                android:textColor="@color/white"
                 android:maxLines="1"
                 android:imeOptions="actionSend"/>
         </com.google.android.material.textfield.TextInputLayout>
@@ -93,7 +96,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginBottom="20dp"
-                app:buttonColor="?colorAccent"
+                app:buttonColor="@color/white"
                 app:buttonText="@string/login"
                 app:buttonTextSize="18sp"
                 />
@@ -103,9 +106,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_centerInParent="true"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="65dp"
                 android:text="Sign in"
-                android:textColor="#191919"
+                android:textColor="@color/white"
                 android:textSize="25sp"
                 android:padding="15dp"
                 android:textStyle="bold" />
@@ -122,7 +125,7 @@
                 android:layout_width="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_height="45dp"
-                android:textColor="#fff"
+                android:textColor="@color/white"
                 android:backgroundTint="@color/black_light"
                 android:text="@string/login_in_browser"
                 android:layout_centerHorizontal="true"
