--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -18,7 +18,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="@dimen/spacing_x_large"
-        android:src="@mipmap/logo"/>
+        android:src="@drawable/logoeasyhub" />
 
     <LinearLayout
         android:layout_width="match_parent"
