--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,7 @@
     <dimen name="text_margin">16dp</dimen>
 
     <dimen name="divider_width">0.6dp</dimen>
+    <dimen name="corner_radius">20dp</dimen>
 
 
     <dimen name="spacing_micro">2dp</dimen>
